--- a/security.html
+++ b/security.html
@@ -39,6 +39,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939842'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light">Norwalk</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939843'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light">Boston</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939845'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939846'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939847'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light">Toronto</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dattojobs/jobs/1939848'>Job Application for Application Security - Penetration Testing Engineer at Datto Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=ox6Q6fwj&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=nhegqMws'> HHB Systems Careers - Cyber Security Engineer and Cyber Security Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -119,7 +143,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -157,7 +181,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-software-engineer-7186'>Cyber Security Software Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -185,7 +209,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -193,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/sr-security-systems-analyst-10333'>Sr. Security Systems Analyst - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/sr-security-systems-analyst-10333'>Sr. Security Systems Analyst - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -201,7 +225,7 @@
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/?gh_src=82a8057f1'>Security Analyst, Assurance | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/?gh_src=82a8057f1'>Security Analyst, Assurance | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -229,7 +253,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -258,7 +282,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -286,7 +310,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oFWqbfwW'>American Specialty Health, Inc. Careers - Information Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oFWqbfwW'>American Specialty Health, Inc. Careers - Information Security Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -294,7 +318,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-CA-San-Diego-4055-Hancock-St/Cybersecurity-Engineer--Junior_R0071292'>Cybersecurity Engineer, Junior</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-CA-San-Diego-4055-Hancock-St/Cybersecurity-Engineer--Junior_R0071292'>Cybersecurity Engineer, Junior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Cybersecurity Engineer, Junior. The Challenge: Everyone knows security needs 
 to be ?baked in? to a system architecture, but you actually know how to bake it in?...</p>
@@ -339,11 +363,11 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prominentedge/f879f540-d971-47a5-aa60-2d852031b86f'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/f879f540-d971-47a5-aa60-2d852031b86f'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/'>Security Analyst, Assurance | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/'>Security Analyst, Assurance | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -375,7 +399,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999698408740-security-operations-soc-analyst-1'>Anitian  Security Operations (SOC) Analyst 1 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -423,30 +447,6 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/vgs/f2dfec1b-7e51-4311-8fcb-65583aebc863'>Very Good Security - Backend Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
-<p><span class="badge badge-light">West Hollywood</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/aid-driving/9d8505ce-96d2-42b4-9d83-52870536012a'>Autonomous Intelligent Driving GmbH - Security Architect ? Hardware & Embedded Systems</a></h5> 
-<p><span class="badge badge-light">Munich</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/aid-driving/dcc30b40-ce7c-44ae-a4e5-491e8c39f746'>Autonomous Intelligent Driving GmbH - Security Engineer - Detect & Respond</a></h5> 
-<p><span class="badge badge-light">Munich  Munich</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://careerlink.com/job/13800-000184'>Sr Cloud Security Engineer Job in Omaha, NE | Careerlink</a></h5> 
-<p><span class="badge badge-light">Omaha, NE</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999679505619-it-security-analyst'>Skynet Secure Solutions IT Security Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
